<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:contentDescription="@string/main_page"
        android:title="@string/main_page"/>
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:contentDescription="@string/cart_page"
        android:title="@string/cart_page"/>
    <item
        android:id="@+id/loginFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/logging_page"
        android:title="@string/account_page"/>
</menu>