<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMerchItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/black"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dark_gradient_selector"
        android:padding="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size"
            android:scaleType="fitCenter"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleMerchItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textColor="@color/foreground_first"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/priceMerchItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textColor="@color/foreground_second"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>