<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMerchItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="0.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titleMerchItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/priceMerchItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/price"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>