<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_selector"
    tools:context=".ui.account.login.LoginFragment">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLoginTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:inputType="textEmailAddress"
            android:textColor="@color/wat_red"
            android:textCursorDrawable="@color/wat_red" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLoginTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginTextInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:inputType="textPassword"
            android:textColor="@color/wat_red"
            android:textCursorDrawable="@color/wat_red" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:fontFamily="@font/actor"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTextInputLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/goToRegisterFromLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:fontFamily="@font/actor"
        android:text="@string/register_now"
        android:textColor="@color/wat_red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>